# virus_scanner

./: .gitignore  CMakeLists.txt  LICENSE  README.md  base.csv  log.txt
base/: base.csv
docs/: ARCHITECTURE_RU.md
log/: log.txt
scanner/: CMakeLists.txt  hashDatabase.cpp  hashDatabase.h  logger.cpp  logger.h  md5Calc.cpp  md5Calc.h  scanner.cpp  scanner.h  scannerApi.h  scannerConstants.h  settingsValidator.cpp  settingsValidator.h  test_compile.cpp  threadPool.cpp  threadPool.h  utils.cpp  utils.h
scannerCli/: CMakeLists.txt  config.cpp  config.h  lineParser.cpp  lineParser.h  main.cpp
tests/: CMakeLists.txt  tests.cpp  unitTests.cpp
